--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=datn_mangostore
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DBMangoStore;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=Minh09032003
+spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
