--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=datn_mangostore
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DBMangoStore;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=Minh09032003
+spring.datasource.password=sa
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.security.oauth2.client.registration.google.client-id=233672267721-516dbcagautchhmigeh037f3of8rf2hr.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
