Edit code done lan 10

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.security.oauth2.client.registration.google.client-id=233672267721-516dbca
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mangostorehn@gmail.com
-spring.mail.password=elxsngleyhmcpzrr
+spring.mail.username=mangostore.hanoi@gmail.com
+spring.mail.password=bhrhdzijllvgmrja
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.web.resources.static-locations=classpath:/static/
