--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,32 @@
 version: '3.8'
-
 services:
-  app:
-    image: datn-mangostore-app:latest
-    build: .
-    ports:
-      - "127.0.0.1:8080:8080"
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
-      - SPRING_PROFILES_ACTIVE=dev
+      SA_PASSWORD: "Minh09032003"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
+    networks:
+      - app-network
+
+  app:
+    build: .
+    container_name: springboot-app
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL= jdbc:sqlserver://sqlserver:1433;databaseName=DBMangoStore;encrypt=true;trustServerCertificate=true;
+      - SPRING_DATASOURCE_USERNAME= sa
+      - SPRING_DATASOURCE_PASSWORD= Minh09032003
+    depends_on:
+      sqlserver:
+        condition: service_healthy
+    networks:
+      app-network:
+        aliases:
+          - sqlserver
+
+networks:
+  app-network:
+    driver: bridge
